# Canop

./: .env.example  .gitignore  AUDIT_REPORT.md  FIX_BACKLOG.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  railway.toml  turbo.json
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: index.ts
apps/desktop/: .gitignore  README.md  electron-builder.json  package.json  tsconfig.json
apps/desktop/resources/: README.md
apps/mobile/: .gitignore  README.md  app.json  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: build.gradle  settings.gradle  (+1 more)
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: DEPLOYMENT.md  QA_REPORT.md
infra/docker/: docker-compose.prod.yml  docker-compose.yml
infra/env/: .env.production.template
infra/scripts/: reset-db.ps1
scripts/: backup-db.sh  dev-bypass-rls.ts  healthcheck.sh  migrate-production.sh
services/ml-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ml-service/app/: auth.py  config.py  db.py  main.py
services/ml-service/app/features/: extractor.py  synthetic.py
services/ml-service/app/models/: dropout_classifier.py  omr_scanner.py  performance_regressor.py
services/ml-service/app/models/trained/: dropout_classifier.pkl  performance_regressor.pkl
services/ml-service/app/routers/: dropout.py  health.py  omr.py  performance.py  training.py
services/ml-service/tests/: test_health.py
(+394 files in other folders)
