[project]
name = "raquel-ml-service"
version = "0.1.0"
description = "Raquel ML microservice — OMR, dropout prediction, performance prediction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "asyncpg>=0.29.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "pandas>=2.2.0",
    "Pillow>=10.4.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pypdf>=5.0.0",
    "joblib>=1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
